<resources>
    <string name="app_name">keyLib</string>
    <string name="language">language</string>
    <string name="add_new_account">Add new account</string>
    <string name="adding_account_title">Adding new account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="password_screen_code_to_short">The code is too short</string>
    <string name="comment">Comment</string>
    <string name="copy">Copy</string>
    <string name="change_your_key">Change your key</string>
    <string name="cancel">Cancel</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_login">Copy login</string>
    <string name="copy_password">Copy password</string>
    <string name="delete_account">Delete account</string>
    <string name="adding_account_enter_valid_data">Enter valid data</string>
    <string name="email">Email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="change_secret_key_enter_key">Enter new key</string>
    <string name="password_reset_error">Sending error</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="version_text_color">Version 0.0.1</string>
    <string name="registration_title">Registration</string>
    <string name="you_can_use_characters_and_numbers">You can use characters and numbers</string>
    <string name="adding_account_name_must_not_contain">"service name must not contain '.', '#', '$', '[', or ']'"</string>
    <string name="your_passwords_is_not_equal">your passwords is not equals</string>
    <string name="change_secret_key_key_length">Key length must be 16</string>
    <string name="main_activity_verify_your_email_address">Verify your email address</string>
    <string name="main_activity_invalid_login">Error, invalid login or password</string>
    <string name="password_screen_set_app_password">Set your app password</string>
    <string name="password_screen_enter_app_password">Enter your app password</string>
    <string name="password_screen_code_wrong">Wrong code</string>
    <string name="password_screen_fingerprint_login">Fingerprint login</string>
    <string name="random_password_generate_before_generate_password">Before generate password</string>
    <string name="random_password_chose_password_length">Chose password length</string>
    <string name="a_link_for_verification_has_been_sent_to_your_email">A link for verification has been sent to your email</string>
    <string name="creation_account_failed">Failed to create account</string>
    <string name="your_encryption_key">Your encryption key: </string>
    <string name="yes">Yes</string>
    <string name="secret_key_copied">Secret key copied</string>
    <string name="that_is_will_change_your_email_and_password">That is will change your email and password</string>
    <string name="password_too_short">Password too short</string>
    <string name="you_need_to_save_your_encryption_key">you need to save your encrypting key</string>
    <string name="that_is_will_delete_your_account_and_all_data">That is will delete your account and all data</string>
    <string name="no">No</string>
    <string name="enter_the_account_data">Please, enter the name of the service, login, password and comment</string>
    <string name="service_name">Service name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="your_current_secret_key">Your current secret key:</string>
    <string name="you_can_generate_new_key">You can generate new key</string>
    <string name="key">Key</string>
    <string name="set_new_secret_key">Set new secret key</string>
    <string name="generate_random_key">Generate random key</string>
    <string name="generate_random_password">Generate random password</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="generating_new_random_password">Generating new random password</string>
    <string name="please_choose_the_number_of_symbols_and_press_generate">Please, choose the number of symbols and press “Generate”</string>
    <string name="_8_symbols">8 symbols</string>
    <string name="_16_symbols">16 symbols</string>
    <string name="generated_password">Generated password:</string>
    <string name="generate">Generate</string>
    <string name="application_code">Application code</string>
    <string name="biometric_access">Biometric access</string>
    <string name="secret_key">Secret key</string>
    <string name="account_settings">Account settings</string>
    <string name="here_you_can_change_your_email_and_or_password">Here you can change your email and/or password</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>
    <string name="password__">password:</string>
    <string name="login__">login:</string>
    <string name="title__">title:</string>
    <string name="title">title</string>
    <string name="chose_language">Chose language</string>


</resources>