<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background_theme"
    tools:context=".screens.RandomPasswordGenerate">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="40dp"
            android:text="@string/generating_new_random_password"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="40dp"
            android:text="@string/please_choose_the_number_of_symbols_and_press_generate"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/short_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/_8_symbols"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/long_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/_16_symbols"
                android:textColor="@color/white" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/generated_password"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/show_password_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generate_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_input_theme"
            android:paddingHorizontal="60dp"
            android:text="@string/generate"
            android:textAllCaps="false"
            android:textColor="@color/btn_orange"
            tools:ignore="ButtonStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/copy_generated_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_input_theme"
            android:paddingHorizontal="60dp"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/text_green"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>