<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background_theme"
    tools:context=".screens.Adding_new_account">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/adding_account_title"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="30dp"
            android:text="@string/enter_the_account_data"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/add_service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_input_theme"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/service_name"
            android:inputType="text"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_input_theme"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_input_theme"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_input_theme"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/comment"
            android:inputType="text"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_input_theme"
            android:paddingHorizontal="60dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/text_green" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>