<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/activity_background_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ChangeSecretKey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_current_secret_key"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/secret_key_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/you_can_generate_new_key"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/text_input_theme"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/key"
            android:inputType="textPersonName"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:textSize="25sp"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/set_new_secret_key_qwe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_input_theme"
            android:paddingHorizontal="60dp"
            android:text="@string/set_new_secret_key"
            android:textAllCaps="false"
            android:textColor="@color/text_green"
            tools:ignore="ButtonStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generate_password_btn_qwe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_input_theme"
            android:paddingHorizontal="60dp"
            android:text="@string/generate_random_key"
            android:textAllCaps="false"
            android:textColor="@color/btn_orange"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>